build/log/idf_py_stderr_output_73241
Command: make -j 10 all
/Users/kagamirudo/002/main/002.c: In function 'cleanup_old_csv_files':
/Users/kagamirudo/002/main/002.c:112:59: error: '%s' directive output may be truncated writing up to 255 bytes into a region of size 56 [-Werror=format-truncation=]
  112 |             snprintf(filepath, sizeof(filepath), "/spiffs/%s", entry->d_name);
      |                                                           ^~
/Users/kagamirudo/002/main/002.c:112:13: note: 'snprintf' output between 9 and 264 bytes into a destination of size 64
  112 |             snprintf(filepath, sizeof(filepath), "/spiffs/%s", entry->d_name);
      |             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: some warnings being treated as errors
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/002.c.obj] Error 1
make[1]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [all] Error 2
